<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="fill_parent"    android:layout_height="fill_parent"    android:orientation="vertical">        <LinearLayout         android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">                <EditText         android:id="@+id/url_et"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_margin="10dp"        android:layout_weight="4"        android:padding="10dp"        android:background="@drawable/edittext"        android:hint="@string/url_hint"        android:textSize="@dimen/font_28"        android:lines="2"/>                <Button         android:id="@+id/comfirm_btn"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_weight="1"        android:layout_gravity="center"        android:text="@string/comfirm"        android:textSize="@dimen/font_28"/>    </LinearLayout>            <Button         android:id="@+id/route_data_download_btn"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_margin="20dp"        android:layout_gravity="center"        android:text="@string/route_data_download"        android:textSize="@dimen/font_28"/>        <Button         android:id="@+id/route_data_upload_btn"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_margin="20dp"        android:layout_gravity="center"        android:text="@string/route_data_upload"        android:textSize="@dimen/font_28"/>        <Button         android:id="@+id/user_data_download_btn"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_margin="20dp"        android:layout_gravity="center"        android:text="@string/user_data_download"        android:textSize="@dimen/font_28"/>              <Button         android:id="@+id/user_data_upload_btn"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_margin="20dp"        android:layout_gravity="center"        android:text="@string/user_data_upload"        android:textSize="@dimen/font_28"/>      </LinearLayout>    