<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jinsen.multifinder.SettingActivity">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/setting_linear"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/interval_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_the_interval"
            android:textSize="@dimen/font_28"/>
    </LinearLayout>

    <RadioGroup 
        android:id="@+id/interval_rgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_linear"
        android:orientation="vertical">
        <RadioButton 
            android:id="@+id/two_sec_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/two_sec"
            android:textColor = "#003399"
            android:checked="true"/>
       <RadioButton 
            android:id="@+id/five_sec_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/five_sec"
            android:textColor = "#003399"/>
       <RadioButton 
            android:id="@+id/ten_sec_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/ten_sec"
            android:textColor = "#003399"/>
       <RadioButton 
            android:id="@+id/fifteen_sec_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/fifteen_sec"
            android:textColor = "#003399"/>
       <RadioButton 
            android:id="@+id/twenty_sec_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/twenty_sec"
            android:textColor = "#003399"/>
    </RadioGroup>

</RelativeLayout>
