<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >


      <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/search_plate_global"
           android:orientation="horizontal" >

        <Button
            android:id="@+id/start_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_default"
            android:text="@string/start_record"/>
        
        <Button
            android:id="@+id/add_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_default"
            android:text="@string/add_point"/>     
        
        <Button
            android:id="@+id/stop_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_default"
            android:text="@string/stop_record"/>       
    </LinearLayout>

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>