<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_border"
    android:orientation="vertical"
    tools:context="com.ll.appbasedongd.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/no_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loc_collect_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/start_margin_vertical"
            android:layout_marginLeft="@dimen/start_title_margin_left"
            android:layout_marginTop="@dimen/start_margin_vertical"
            android:text="@string/loc_collect"
            android:textColor="#000000"
            android:textSize="@dimen/start_title_font_size" />
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/no_border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/route_navi_tv"
             android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/start_margin_vertical"
            android:layout_marginLeft="@dimen/start_title_margin_left"
            android:layout_marginTop="@dimen/start_margin_vertical"
            android:text="@string/route_navi"
            android:textColor="#000000"
            android:textSize="@dimen/start_title_font_size" />
        
          <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/no_border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/user_data_update_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/start_margin_vertical"
            android:layout_marginLeft="@dimen/start_title_margin_left"
            android:layout_marginTop="@dimen/start_margin_vertical"
            android:text="@string/user_data_modify"
            android:textColor="#000000"
            android:textSize="@dimen/start_title_font_size" />
        
          <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/no_border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/data_update_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/start_margin_vertical"
            android:layout_marginLeft="@dimen/start_title_margin_left"
            android:layout_marginTop="@dimen/start_margin_vertical"
            android:text="@string/data_update"
            android:textColor="#000000"
            android:textSize="@dimen/start_title_font_size" />
        
          <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"/>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/no_border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/offline_map_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/start_margin_vertical"
            android:layout_marginLeft="@dimen/start_title_margin_left"
            android:layout_marginTop="@dimen/start_margin_vertical"
            android:text="@string/offline_map_download"
            android:textColor="#000000"
            android:textSize="@dimen/start_title_font_size" />
        
          <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"/>
    </LinearLayout>
</LinearLayout>